force-app/main/default/objects/loan__Office_Name__c/loan__Office_Name__c.object-meta.xml
<CustomObject>
    <description>Name of the office</description>
    <label>Company</label>
    <nameField>
        <label>Company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>