force-app/main/default/objects/loan__Office_Name__c/fields/loan__Bank_Account_Checks__c.field-meta.xml
<CustomField>
    <fullName>loan__Bank_Account_Checks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account (Checks)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a master GL.</errorMessage>
        <filterItems>
            <field>loan__MF_Account__c.loan__Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipName>Branches3</relationshipName>
    <type>Lookup</type>
</CustomField>