force-app/main/default/objects/loan__Office_Name__c/fields/loan__Branch_s_Bank__c.field-meta.xml
<CustomField>
    <fullName>loan__Branch_s_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For the fractionalization platform this is the main trust account.</inlineHelpText>
    <label>Company&apos;s Bank</label>
    <referenceTo>loan__Bank__c</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>