force-app/main/default/objects/loan__Office_Name__c/fields/loan__Cash_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Cash_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cash account tied to this branch.</description>
    <inlineHelpText>Please select the cash account you would like to associate with this branch.</inlineHelpText>
    <label>Cash Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>GL is neither of type ASSET nor a master account.</errorMessage>
        <filterItems>
            <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>10000 - ASSETS</value>
        </filterItems>
        <filterItems>
            <field>loan__MF_Account__c.loan__Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipName>Offices</relationshipName>
    <type>Lookup</type>
</CustomField>