force-app/main/default/objects/loan__Office_Name__c/fields/loan__Current_System_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Current_System_Date__c</fullName>
    <label>Current System Date</label>
    <type>Date</type>
</CustomField>