force-app/main/default/objects/loan__Office_Name__c/fields/loan__Days_in_advance_to_create_Collection_Rep__c.field-meta.xml
<CustomField>
    <fullName>loan__Days_in_advance_to_create_Collection_Rep__c</fullName>
    <label>Days in advance to create Collection Rep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>