force-app/main/default/objects/loan__Office_Name__c/fields/loan__Inward_Check_Clearance_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Inward_Check_Clearance_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inward Check Clearance Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a master GL.</errorMessage>
        <filterItems>
            <field>loan__MF_Account__c.loan__Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipName>Branches1</relationshipName>
    <type>Lookup</type>
</CustomField>