force-app/main/default/objects/loan__Office_Name__c/fields/loan__Is_Branch__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Branch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Branch</label>
    <type>Checkbox</type>
</CustomField>