force-app/main/default/objects/loan__Office_Name__c/fields/loan__Loan_Schedule_tied_to_Meeting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Schedule_tied_to_Meeting_Schedule__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Loan Schedule tied to Meeting Schedule</label>
    <type>Checkbox</type>
</CustomField>