force-app/main/default/objects/loan__Office_Name__c/fields/loan__Mark_Suspended_After_Days__c.field-meta.xml
<CustomField>
    <fullName>loan__Mark_Suspended_After_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Mark Suspended After Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>