force-app/main/default/objects/loan__Office_Name__c/fields/loan__Office_Location__c.field-meta.xml
<CustomField>
    <fullName>loan__Office_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Office Address</description>
    <label>Location</label>
    <referenceTo>loan__Branch_Location__c</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Offices</relationshipName>
    <type>Lookup</type>
</CustomField>