force-app/main/default/objects/loan__Office_Name__c/fields/loan__Office_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Office_Short_Name__c</fullName>
    <description>Office Short Name</description>
    <inlineHelpText>Office Short Name</inlineHelpText>
    <label>Short Name</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>