force-app/main/default/objects/loan__Office_Name__c/fields/loan__Office_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Office_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Office Type</description>
    <label>Type</label>
    <referenceTo>loan__Office_Type__c</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Offices</relationshipName>
    <type>Lookup</type>
</CustomField>