force-app/main/default/objects/loan__Office_Name__c/fields/loan__Parent_Office__c.field-meta.xml
<CustomField>
    <fullName>loan__Parent_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Office</description>
    <inlineHelpText>Parent Office</inlineHelpText>
    <label>Parent Company</label>
    <referenceTo>loan__Office_Name__c</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Offices</relationshipName>
    <type>Lookup</type>
</CustomField>