force-app/main/default/objects/loan__Office_Name__c/fields/loan__Profit_and_Loss_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Profit_and_Loss_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profit and Loss Account</label>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipName>Profit_and_Loss_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>