force-app/main/default/objects/loan__Office_Name__c/fields/loan__Write_Off_Suggestion_Days__c.field-meta.xml
<CustomField>
    <fullName>loan__Write_Off_Suggestion_Days__c</fullName>
    <label>Write Off Suggestion Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>