force-app/main/default/objects/loan__Office_Name__c/recordTypes/loan__Root_Branch.recordType-meta.xml
<RecordType>
    <fullName>loan__Root_Branch</fullName>
    <active>true</active>
    <description>This is the root branch/office in the organization. There can only be 1 such branch.</description>
    <label>Root Branch</label>
</RecordType>