force-app/main/default/objects/loan__Office_Name__c/validationRules/loan__System_UpdateDate_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__System_UpdateDate_Check</fullName>
    <active>true</active>
    <description>Current system date shouldn&apos;t be beyond the current calender date</description>
    <errorConditionFormula>loan__Current_System_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Current system date :[loan__Current_System_Date__c] shouldn&apos;t be beyond the current calender date:[TODAY()]</errorMessage>
</ValidationRule>